--- a/frontend/src/style/globals.css
+++ b/frontend/src/style/globals.css
@@ -1,4 +1,3 @@
-
 @import "tailwindcss";
 
 :root {
@@ -10,11 +9,10 @@ body {
 }
 
 * {
-  padding: 0;
-  margin: 0;
+
   box-sizing: border-box;
 }
 
 .fix-height {
-  min-height: calc(100vh - 150px);
+  min-height: calc(100vh - 150px) !important;
 }
